--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 My readed books and what I recomend
             </h2>
             <div class="books__readed">
-                <img class="books__img" src="/img/book-1.jpg" alt="">
+                <img class="books__img" src="img/book-1.jpg" alt="">
                 <div class="books-about">
                     <h3 class="books-about__header"><span class="selected-text">About book</span></h3>
                     <div class="progress">
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="books__readed bokk">
-                <img class="books__img" src="/img/book-2.jpg" alt="">
+                <img class="books__img" src="img/book-2.jpg" alt="">
                 <div class="books-about">
                     <h3 class="books-about__header"><span class="selected-text">About book</span></h3>
                     <div class="progress">
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="books__readed">
-                <img class="books__img" src="/img/book-3.jpg" alt="">
+                <img class="books__img" src="img/book-3.jpg" alt="">
                 <div class="books-about">
                     <h3 class="books-about__header"><span class="selected-text">About book</span></h3>
                     <div class="progress">
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="books__readed bokk">
-                <img class="books__img" src="/img/book-4.jpg" alt="">
+                <img class="books__img" src="img/book-4.jpg" alt="">
                 <div class="books-about">
                     <h3 class="books-about__header"><span class="selected-text">About book</span></h3>
                     <div class="progress">
@@ -194,6 +194,12 @@
                     </div>
                     <a href="#" class="wrapper__button">Submit</a>
                 </div>
+            </div>
+
+            <div id="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2541.0716105714705!2d30.431667813909197!3d50.439766791952216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cc19f547785d%3A0xe7e588240239d964!2z0J3QsNGG0LjQvtC90LDQu9GM0L3Ri9C5INCw0LLQuNCw0YbQuNC-0L3QvdGL0Lkg0YPQvdC40LLQtdGA0YHQuNGC0LXRgg!5e0!3m2!1sru!2sua!4v1569695829611!5m2!1sru!2sua"
+                    width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </section>
     </footer>
